[XForms] wrong ordering of dispatched events, bug 377878, r=doronr+olli